battle action selection menu working

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,63 +1,2 @@
-Overworld:
-    Hitbox Trigger
-        Emits signal when player enters its area
-    Activate Trigger
-        Emits signal when player presses A while facing it
-    Wall
-        Enable / Disable
-    PlayerCircle
-        Direction
-        Control
-            sprint button?
-            should first dpad hit only rotate like in pkmn?
-    Skybox
-        parallax scrolling
-
-Battle:
-    Entity:
-
-    Move:
-
-    Status:
-
-Menu:
+Inventory Menu:
     Character Page:
-        Whole-body sprites, should characters be able to equip gear?
-        Attack, Def, Speed:
-            Sprite
-            Colored `LevelBar`
-            Final Value
-        EV:
-            `Scale` or `SpinButton` or series of dots?
-        Moveslots:
-            Permanents
-            Consumable Items
-            Moveslots
-
-    Character Inventory:
-        Left: VROW of everything
-        Moves / Consumables have different pages
-
-    Character Moveset:
-        Orb Sprites
-
-    Move:
-        Menu Row:
-            Orb / Item Sprite
-            Name
-            Stacks
-                if move: x / y, eg. `3/4` or `3/∞`
-                if item: x, eg. `4`
-                if item reaches 0, remove from inventory
-                if move reaches 0, grey out
-        Tooltip:
-            Name (Move | Consumable)
-            Stacks: 3 / 4
-            Effect: Deal 1.5 x $ATK to target enemy
-            (flavor text, sprite in background)
-
-UI:
-    Animation for `Switch`
-    Animation for `TabView` page transition
-    Revealer Animation
-
